exports[`PickListComponent should display component (nodes) correctly 1`] = `
<Injected
  appSession={
    AppSession {
      "state": undefined
    }
  }
  emitError={[Function emitError]}
  emitSuccess={[Function emitSuccess]}
  pickList={
    Object {
      "nodes": Array [
        Object {
          "marked": false,
          "path": Array [
            1
          ],
          "value": Object {
            "id": 1,
            "name": "Hei"
          }
        },
        Object {
          "marked": false,
          "path": Array [
            1,
            2
          ],
          "value": Object {
            "id": 2,
            "name": "Hei"
          }
        },
        Object {
          "marked": true,
          "path": Array [
            1,
            3
          ],
          "value": Object {
            "id": 3,
            "name": "Hei"
          }
        }
      ],
      "objects": Array [
        Object {
          "marked": false,
          "path": Array [
            1
          ],
          "value": Object {
            "id": 1,
            "name": "Test21"
          }
        },
        Object {
          "isMainObject": [Function isMainObject],
          "marked": true,
          "path": Array [
            1,
            2
          ],
          "value": Object {
            "id": 2,
            "mainObjectId": 1,
            "name": "Test2"
          }
        },
        Object {
          "marked": false,
          "path": Array [
            1,
            3
          ],
          "value": Object {
            "id": 3,
            "name": "Test23"
          }
        }
      ]
    }
  }
  refreshNode={[Function refreshNode]}
  refreshObjects={[Function refreshObjects]}
  removeNode={[Function removeNode]}
  removeObject={[Function removeObject]}
  route={
    Object {
      "type": "nodes"
    }
  }
  toggleMainObject={[Function toggleMainObject]}
  toggleNode={[Function toggleNode]}
  toggleObject={[Function toggleObject]} />
`;

exports[`PickListComponent should display component (objects) correctly 1`] = `
<Injected
  appSession={
    AppSession {
      "state": undefined
    }
  }
  emitError={[Function emitError]}
  emitSuccess={[Function emitSuccess]}
  pickList={
    Object {
      "nodes": Array [
        Object {
          "marked": false,
          "path": Array [
            1
          ],
          "value": Object {
            "id": 1,
            "name": "Hei"
          }
        },
        Object {
          "marked": false,
          "path": Array [
            1,
            2
          ],
          "value": Object {
            "id": 2,
            "name": "Hei"
          }
        },
        Object {
          "marked": true,
          "path": Array [
            1,
            3
          ],
          "value": Object {
            "id": 3,
            "name": "Hei"
          }
        }
      ],
      "objects": Array [
        Object {
          "marked": false,
          "path": Array [
            1
          ],
          "value": Object {
            "id": 1,
            "name": "Test21"
          }
        },
        Object {
          "isMainObject": [Function isMainObject],
          "marked": true,
          "path": Array [
            1,
            2
          ],
          "value": Object {
            "id": 2,
            "mainObjectId": 1,
            "name": "Test2"
          }
        },
        Object {
          "marked": false,
          "path": Array [
            1,
            3
          ],
          "value": Object {
            "id": 3,
            "name": "Test23"
          }
        }
      ]
    }
  }
  refreshNode={[Function refreshNode]}
  refreshObjects={[Function refreshObjects]}
  removeNode={[Function removeNode]}
  removeObject={[Function removeObject]}
  route={
    Object {
      "type": "objects"
    }
  }
  toggleMainObject={[Function toggleMainObject]}
  toggleNode={[Function toggleNode]}
  toggleObject={[Function toggleObject]} />
`;

exports[`PickListTable should display node-picklist correctly 1`] = `
<div>
  <Table
    bordered={false}
    bsClass="table"
    condensed={true}
    hover={true}
    responsive={true}
    striped={true}>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "left",
              "width": "2em"
            }
          }>
          <input
            checked={false}
            className="normalAction"
            onChange={[Function onChange]}
            title="Velg alle"
            type="checkbox" />
        </th>
        <th
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "bottom"
            }
          }>
          <FontAwesome
            className="normalActionNoPadding"
            name="truck"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Flytt valgte objekter" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Valgt objekte(r)">
            (1)
          </span>
          <FontAwesome
            className="normalAction"
            name="remove"
            onClick={[Function onClick]}
            style={
              Object {
                "fontSize": "1.5em"
              }
            }
            title="Fjern valgte objekter fra listen" />
          <span
            className="normalActionNoPadding"
            style={
              Object {
                "fontSize": "0.8em"
              }
            }
            title="Valgt objekte(r)">
            (1)
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked=""
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
      <tr
        className={undefined}>
        <td
          style={
            Object {
              "textAlign": "left",
              "verticalAlign": "middle",
              "width": "3em"
            }
          }>
          <span>
            <input
              checked="checked"
              onClick={[Function onClick]}
              type="checkbox" />
          </span>
        </td>
        <td>
          <span
            className="pickListIcon">
            <span
              className="icon icon-musitobject" />
             
            <div>
              <span
                style={
                  Object {
                    "paddingLeft": "1em"
                  }
                } />
              <div
                className="labelText" />
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </Table>
</div>
`;
